; ModuleID = '/home/carl/AnghaBench/sumatrapdf/ext/mujs/extr_jsparse.c_newexp.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/ext/mujs/extr_jsparse.c_newexp.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_9__ = type { i32 }

@TK_NEW = common dso_local global i8 0, align 1
@NEW = common dso_local global i32 0, align 4
@TK_FUNCTION = common dso_local global i8 0, align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (%struct.TYPE_9__*)* @newexp to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @newexp(%struct.TYPE_9__* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca %struct.TYPE_9__*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  store %struct.TYPE_9__* %0, %struct.TYPE_9__** %3, align 8
  %7 = load %struct.TYPE_9__*, %struct.TYPE_9__** %3, align 8
  %8 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  store i32 %9, i32* %6, align 4
  %10 = load %struct.TYPE_9__*, %struct.TYPE_9__** %3, align 8
  %11 = load i8, i8* @TK_NEW, align 1
  %12 = call i64 @jsP_accept(%struct.TYPE_9__* %10, i8 signext %11)
  %13 = icmp ne i64 %12, 0
  br i1 %13, label %14, label %33

14:                                               ; preds = %1
  %15 = load %struct.TYPE_9__*, %struct.TYPE_9__** %3, align 8
  %16 = call i32* @memberexp(%struct.TYPE_9__* %15)
  store i32* %16, i32** %4, align 8
  %17 = load %struct.TYPE_9__*, %struct.TYPE_9__** %3, align 8
  %18 = call i64 @jsP_accept(%struct.TYPE_9__* %17, i8 signext 40)
  %19 = icmp ne i64 %18, 0
  br i1 %19, label %20, label %29

20:                                               ; preds = %14
  %21 = load %struct.TYPE_9__*, %struct.TYPE_9__** %3, align 8
  %22 = call i32* @arguments(%struct.TYPE_9__* %21)
  store i32* %22, i32** %5, align 8
  %23 = load %struct.TYPE_9__*, %struct.TYPE_9__** %3, align 8
  %24 = call i32 @jsP_expect(%struct.TYPE_9__* %23, i8 signext 41)
  %25 = load i32, i32* @NEW, align 4
  %26 = load i32*, i32** %4, align 8
  %27 = load i32*, i32** %5, align 8
  %28 = call i32* @EXP2(i32 %25, i32* %26, i32* %27)
  store i32* %28, i32** %2, align 8
  br label %45

29:                                               ; preds = %14
  %30 = load i32, i32* @NEW, align 4
  %31 = load i32*, i32** %4, align 8
  %32 = call i32* @EXP1(i32 %30, i32* %31)
  store i32* %32, i32** %2, align 8
  br label %45

33:                                               ; preds = %1
  %34 = load %struct.TYPE_9__*, %struct.TYPE_9__** %3, align 8
  %35 = load i8, i8* @TK_FUNCTION, align 1
  %36 = call i64 @jsP_accept(%struct.TYPE_9__* %34, i8 signext %35)
  %37 = icmp ne i64 %36, 0
  br i1 %37, label %38, label %42

38:                                               ; preds = %33
  %39 = load %struct.TYPE_9__*, %struct.TYPE_9__** %3, align 8
  %40 = load i32, i32* %6, align 4
  %41 = call i32* @funexp(%struct.TYPE_9__* %39, i32 %40)
  store i32* %41, i32** %2, align 8
  br label %45

42:                                               ; preds = %33
  %43 = load %struct.TYPE_9__*, %struct.TYPE_9__** %3, align 8
  %44 = call i32* @primary(%struct.TYPE_9__* %43)
  store i32* %44, i32** %2, align 8
  br label %45

45:                                               ; preds = %42, %38, %29, %20
  %46 = load i32*, i32** %2, align 8
  ret i32* %46
}

declare dso_local i64 @jsP_accept(%struct.TYPE_9__*, i8 signext) #1

declare dso_local i32* @memberexp(%struct.TYPE_9__*) #1

declare dso_local i32* @arguments(%struct.TYPE_9__*) #1

declare dso_local i32 @jsP_expect(%struct.TYPE_9__*, i8 signext) #1

declare dso_local i32* @EXP2(i32, i32*, i32*) #1

declare dso_local i32* @EXP1(i32, i32*) #1

declare dso_local i32* @funexp(%struct.TYPE_9__*, i32) #1

declare dso_local i32* @primary(%struct.TYPE_9__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
